<resources>
    <string name="app_name">阅读训练</string>
    <string name="back">返回</string>
    <string name="user_name">用户名</string>
    <string name="in_school">校内文章</string>
    <string name="out_school">校外文章</string>
    <string name="user_name_input">请输入用户名</string>
    <string name="user_psd">密码</string>
    <string name="user_psd_input">请输入密码</string>
    <string name="user_psd_input_again">请再次输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="pwd_not_same">两次密码不一致</string>
    <string name="register_ok">注册成功，快去登录吧！</string>
    <string name="register_error">用户已注册！</string>
    <string name="unknown_error">失败，未知错误！</string>
    <string name="unselect_speed_mode">请先选择阅读速度！</string>
    <string name="account_status_error">"您的账户尚未激活，请联系管理员！"</string>
    <string name="login_error">"对不起，用户名或密码错误！"</string>
    <string name="content">
        Canvas 和 SVG 都允许您在浏览器中创建图形，但是它们在根本上是不同的。\n

        SVG\n
        SVG 是一种使用 XML 描述 2D 图形的语言。\n
        SVG 基于 XML，这意味着 SVG DOM 中的每个元素都是可用的。您可以为某个元素附加 JavaScript 事件处理器。\n
        在 SVG 中，每个被绘制的图形均被视为对象。如果 SVG 对象的属性发生变化，那么浏览器能够自动重现图形。\n

        Canvas\n
        Canvas 通过 JavaScript 来绘制 2D 图形。\n
        Canvas 是逐像素进行渲染的。\n
        在 canvas 中，一旦图形被绘制完成，它就不会继续得到浏览器的关注。如果其位置发生变化，那么整个场景也需要重新绘制，包括任何或许已被图形覆盖的对象。\n

        下表列出了 canvas 与 SVG 之间的一些不同之处。\n

        Canvas\n
        依赖分辨率\n
        不支持事件处理器\n
        弱的文本渲染能力\n
        能够以 .png 或 .jpg 格式保存结果图像\n
        最适合图像密集型的游戏，其中的许多对象会被频繁重绘\n
        SVG\n
        不依赖分辨率\n
        支持事件处理器\n
        最适合带有大型渲染区域的应用程序（比如谷歌地图）\n
        复杂度高会减慢渲染速度（任何过度使用 DOM 的应用都不快）\n
        不适合游戏应用\n
    </string>
</resources>
